--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -6,14 +6,12 @@ name: Node.js CI
 on:
   push:
     branches: [ master ]
-  pull_request:
-    branches: [ master ]
+
 
 jobs:
   build:
 
-    runs-on: ubuntu-latest
-
+    runs-on: self-hosted
     strategy:
       matrix:
         node-version: [12.x, 14.x, 16.x]
